[gd_scene load_steps=4 format=3 uid="uid://douvo7o182s2"]

[ext_resource type="Script" uid="uid://brguqg68sinbl" path="res://Scripts/UI/UIElements/bottom_nav_bar.gd" id="1_ku0vv"]
[ext_resource type="PackedScene" uid="uid://dwfyxhnik18ry" path="res://Scenes/UI/Player/player_ui.tscn" id="1_l5a5a"]
[ext_resource type="Texture2D" uid="uid://dx3kt0kk38b3n" path="res://Resources/Art/UIElements/alert.png" id="2_3dam2"]

[node name="BottomNavBar" type="CanvasLayer" groups=["bottom ui"]]
script = ExtResource("1_ku0vv")

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color(0.317647, 0.317647, 0.317647, 0.760784)
anchors_preset = -1
anchor_top = 0.94166666
anchor_right = 1.0
anchor_bottom = 0.94166666
offset_left = -2.0
offset_top = -48.0
offset_right = -2.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="PlayerUI" parent="ColorRect" instance=ExtResource("1_l5a5a")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -352.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="TalentButton" type="Button" parent="ColorRect/HBoxContainer"]
visible = false
layout_mode = 2
text = "Talents"

[node name="AlertIndicator" type="TextureRect" parent="ColorRect/HBoxContainer/TalentButton"]
visible = false
layout_mode = 0
offset_left = 105.0
offset_top = -6.0
offset_right = 121.0
offset_bottom = 10.0
texture = ExtResource("2_3dam2")

[node name="Character" type="Button" parent="ColorRect/HBoxContainer"]
layout_mode = 2
text = "Character"

[node name="InventoryButton" type="Button" parent="ColorRect/HBoxContainer"]
layout_mode = 2
text = "Inventory"

[node name="BackButton" type="Button" parent="ColorRect/HBoxContainer"]
visible = false
layout_mode = 2
text = "Back
"

[node name="MenuButton" type="Button" parent="ColorRect/HBoxContainer"]
layout_mode = 2
text = "Menu"

[connection signal="button_down" from="ColorRect/HBoxContainer/TalentButton" to="." method="_on_talent_button_button_down"]
[connection signal="button_down" from="ColorRect/HBoxContainer/Character" to="." method="_on_character_button_down"]
[connection signal="button_down" from="ColorRect/HBoxContainer/InventoryButton" to="." method="_on_inventory_pressed"]
[connection signal="button_down" from="ColorRect/HBoxContainer/BackButton" to="." method="_on_back_button_button_down"]
